// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-accordion> Component Default <bolt-accordion> w/o Shadow DOM renders 1`] = `
<bolt-accordion
  no-shadow=""
  style=""
>
  <!---->
  
      
  <div
    aria-multiselectable="true"
    class="c-bolt-accordion"
    id="handorgel2"
    style=""
  >
    
        
    <!---->
    <!---->
    <bolt-accordion-item
      no-shadow=""
      style=""
    >
      <!---->
      
      
      <div
        class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
        style=""
      >
        <!---->
        <!---->
        
      
            
        <div
          class="c-bolt-accordion-item__trigger"
          id="handorgel2-fold1-header"
          style=""
        >
          <!---->
          
          
          <button
            aria-controls="handorgel2-fold1-content"
            aria-disabled="false"
            aria-expanded="false"
            class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
            style=""
            type="button"
          >
            
            
      
            <div
              class="c-bolt-accordion-item__trigger-content"
              style=""
            >
              
        
              <!---->
              <div
                class="is-first-child is-last-child"
                slot="trigger"
                style=""
              >
                Accordion item 1
              </div>
              <!---->
              
      
            </div>
            
      
            <span
              class="c-bolt-accordion-item__trigger-icons"
              style=""
            >
              
        
              <div
                class="c-bolt-accordion-item__trigger-icons-inner"
                style=""
              >
                
          
                <svg
                  class="e-bolt-icon"
                  style=""
                  viewBox="0 0 32 32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M26.6 12.4c.6-.6.6-1.6 0-2.2s-1.6-.6-2.2 0L16 18.5l-8.3-8.4c-.6-.6-1.6-.6-2.2 0-.3.4-.5.8-.5 1.2s.2.8.5 1.1l9.4 9.4c.6.6 1.6.6 2.2 0z"
                    fill="#151619"
                    fill-rule="evenodd"
                    style=""
                  />
                </svg>
                
        
              </div>
              
      
            </span>
            
    
          
          </button>
          
        
          <!---->
        </div>
        
          
    
        <!---->
        
      
        <div
          aria-labelledby="handorgel2-fold1-header"
          class="c-bolt-accordion-item__content"
          id="handorgel2-fold1-content"
          role="region"
          style=""
        >
          
        
          <div
            class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium c-bolt-accordion-item__content-inner--offset"
            style=""
          >
            
          
            <!---->
            <!---->
            <!---->
            <div
              class="is-first-child is-last-child"
              style=""
            >
              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
            </div>
            <!---->
            <!---->
            
        
          </div>
          
      
        </div>
        
    
        <!---->
        <!---->
      </div>
      
    
      <!---->
    </bolt-accordion-item>
    <!---->
    <!---->
    <bolt-accordion-item
      no-shadow=""
      style=""
    >
      <!---->
      
      
      <div
        class="c-bolt-accordion-item c-bolt-accordion-item--separator"
        style=""
      >
        <!---->
        <!---->
        
      
            
        <div
          class="c-bolt-accordion-item__trigger"
          id="handorgel2-fold2-header"
          style=""
        >
          <!---->
          
          
          <button
            aria-controls="handorgel2-fold2-content"
            aria-disabled="false"
            aria-expanded="false"
            class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
            style=""
            type="button"
          >
            
            
      
            <div
              class="c-bolt-accordion-item__trigger-content"
              style=""
            >
              
        
              <!---->
              <div
                class="is-first-child is-last-child"
                slot="trigger"
                style=""
              >
                Accordion item 2
              </div>
              <!---->
              
      
            </div>
            
      
            <span
              class="c-bolt-accordion-item__trigger-icons"
              style=""
            >
              
        
              <div
                class="c-bolt-accordion-item__trigger-icons-inner"
                style=""
              >
                
          
                <svg
                  class="e-bolt-icon"
                  style=""
                  viewBox="0 0 32 32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M26.6 12.4c.6-.6.6-1.6 0-2.2s-1.6-.6-2.2 0L16 18.5l-8.3-8.4c-.6-.6-1.6-.6-2.2 0-.3.4-.5.8-.5 1.2s.2.8.5 1.1l9.4 9.4c.6.6 1.6.6 2.2 0z"
                    fill="#151619"
                    fill-rule="evenodd"
                    style=""
                  />
                </svg>
                
        
              </div>
              
      
            </span>
            
    
          
          </button>
          
        
          <!---->
        </div>
        
          
    
        <!---->
        
      
        <div
          aria-labelledby="handorgel2-fold2-header"
          class="c-bolt-accordion-item__content"
          id="handorgel2-fold2-content"
          role="region"
          style=""
        >
          
        
          <div
            class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium c-bolt-accordion-item__content-inner--offset"
            style=""
          >
            
          
            <!---->
            <!---->
            <!---->
            <div
              class="is-first-child is-last-child"
              style=""
            >
              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
            </div>
            <!---->
            <!---->
            
        
          </div>
          
      
        </div>
        
    
        <!---->
        <!---->
      </div>
      
    
      <!---->
    </bolt-accordion-item>
    <!---->
    <!---->
    <bolt-accordion-item
      no-shadow=""
      style=""
    >
      <!---->
      
      
      <div
        class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
        style=""
      >
        <!---->
        <!---->
        
      
            
        <div
          class="c-bolt-accordion-item__trigger"
          id="handorgel2-fold3-header"
          style=""
        >
          <!---->
          
          
          <button
            aria-controls="handorgel2-fold3-content"
            aria-disabled="false"
            aria-expanded="false"
            class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
            style=""
            type="button"
          >
            
            
      
            <div
              class="c-bolt-accordion-item__trigger-content"
              style=""
            >
              
        
              <!---->
              <div
                class="is-first-child is-last-child"
                slot="trigger"
                style=""
              >
                Accordion item 3
              </div>
              <!---->
              
      
            </div>
            
      
            <span
              class="c-bolt-accordion-item__trigger-icons"
              style=""
            >
              
        
              <div
                class="c-bolt-accordion-item__trigger-icons-inner"
                style=""
              >
                
          
                <svg
                  class="e-bolt-icon"
                  style=""
                  viewBox="0 0 32 32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M26.6 12.4c.6-.6.6-1.6 0-2.2s-1.6-.6-2.2 0L16 18.5l-8.3-8.4c-.6-.6-1.6-.6-2.2 0-.3.4-.5.8-.5 1.2s.2.8.5 1.1l9.4 9.4c.6.6 1.6.6 2.2 0z"
                    fill="#151619"
                    fill-rule="evenodd"
                    style=""
                  />
                </svg>
                
        
              </div>
              
      
            </span>
            
    
          
          </button>
          
        
          <!---->
        </div>
        
          
    
        <!---->
        
      
        <div
          aria-labelledby="handorgel2-fold3-header"
          class="c-bolt-accordion-item__content"
          id="handorgel2-fold3-content"
          role="region"
          style=""
        >
          
        
          <div
            class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium c-bolt-accordion-item__content-inner--offset"
            style=""
          >
            
          
            <!---->
            <!---->
            <!---->
            <div
              class="is-first-child is-last-child"
              style=""
            >
              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
            </div>
            <!---->
            <!---->
            
        
          </div>
          
      
        </div>
        
    
        <!---->
        <!---->
      </div>
      
    
      <!---->
    </bolt-accordion-item>
    <!---->
    <!---->
    
      
  </div>
  
    
  <!---->
</bolt-accordion>
`;

exports[`<bolt-accordion> Component Default <bolt-accordion> with Shadow DOM renders 1`] = `
<div class="c-bolt-accordion"
     id="handorgel1"
>
  <slot>
  </slot>
</div>
`;

exports[`<bolt-accordion> Component Default <bolt-accordion> with Shadow DOM renders 2`] = `
<div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item">
  <div class="c-bolt-accordion-item__trigger"
       id="handorgel1-fold1-header"
  >
    <button type="button"
            class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
            aria-controls="handorgel1-fold1-content"
            aria-expanded="false"
            aria-disabled="false"
    >
      <div class="c-bolt-accordion-item__trigger-content">
        <slot name="trigger">
        </slot>
      </div>
      <span class="c-bolt-accordion-item__trigger-icons">
        <div class="c-bolt-accordion-item__trigger-icons-inner">
          <svg xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 32 32"
               class="e-bolt-icon"
          >
            <path fill="#151619"
                  fill-rule="evenodd"
                  d="M26.6 12.4c.6-.6.6-1.6 0-2.2s-1.6-.6-2.2 0L16 18.5l-8.3-8.4c-.6-.6-1.6-.6-2.2 0-.3.4-.5.8-.5 1.2s.2.8.5 1.1l9.4 9.4c.6.6 1.6.6 2.2 0z"
                  clip-rule="evenodd"
            >
            </path>
          </svg>
        </div>
      </span>
    </button>
  </div>
  <div class="c-bolt-accordion-item__content"
       id="handorgel1-fold1-content"
       role="region"
       aria-labelledby="handorgel1-fold1-header"
  >
    <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium c-bolt-accordion-item__content-inner--offset">
      <slot>
      </slot>
    </div>
  </div>
</div>
`;

exports[`<bolt-accordion> Component Inactive item 1`] = `
<bolt-accordion>
  <ssr-keep for="bolt-accordion"
            class="c-bolt-accordion"
  >
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Active accordion item
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item inactive>
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <div class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-item__trigger-label--inactive c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Inactive accordion item
              </div>
            </ssr-keep>
          </div>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Active accordion item
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
  </ssr-keep>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component basic usage 1`] = `
<bolt-accordion>
  <ssr-keep for="bolt-accordion"
            class="c-bolt-accordion"
  >
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 1
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 2
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 3
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
  </ssr-keep>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component content spacing: large 1`] = `
<bolt-accordion>
  <ssr-keep for="bolt-accordion"
            class="c-bolt-accordion"
  >
    <bolt-accordion-item content-spacing="large">
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 1
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--large"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
  </ssr-keep>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component content spacing: medium 1`] = `
<bolt-accordion>
  <ssr-keep for="bolt-accordion"
            class="c-bolt-accordion"
  >
    <bolt-accordion-item content-spacing="medium">
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 1
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
  </ssr-keep>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component content spacing: none 1`] = `
<bolt-accordion>
  <ssr-keep for="bolt-accordion"
            class="c-bolt-accordion"
  >
    <bolt-accordion-item content-spacing="none">
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 1
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--none"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
  </ssr-keep>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component content spacing: small 1`] = `
<bolt-accordion>
  <ssr-keep for="bolt-accordion"
            class="c-bolt-accordion"
  >
    <bolt-accordion-item content-spacing="small">
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 1
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--small"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
  </ssr-keep>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component content spacing: xsmall 1`] = `
<bolt-accordion>
  <ssr-keep for="bolt-accordion"
            class="c-bolt-accordion"
  >
    <bolt-accordion-item content-spacing="xsmall">
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 1
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--xsmall"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
  </ssr-keep>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component expand single items: false 1`] = `
<bolt-accordion>
  <ssr-keep for="bolt-accordion"
            class="c-bolt-accordion"
  >
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 1
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 2
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 3
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
  </ssr-keep>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component expand single items: true 1`] = `
<bolt-accordion single>
  <ssr-keep for="bolt-accordion"
            class="c-bolt-accordion"
  >
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 1
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 2
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 3
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
  </ssr-keep>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component spacing: large 1`] = `
<bolt-accordion spacing="large">
  <ssr-keep for="bolt-accordion"
            class="c-bolt-accordion"
  >
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--large"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 1
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--large"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--large"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 2
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--large"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--large"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 3
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--large"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
  </ssr-keep>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component spacing: medium 1`] = `
<bolt-accordion spacing="medium">
  <ssr-keep for="bolt-accordion"
            class="c-bolt-accordion"
  >
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 1
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 2
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 3
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
  </ssr-keep>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component spacing: none 1`] = `
<bolt-accordion spacing="none">
  <ssr-keep for="bolt-accordion"
            class="c-bolt-accordion"
  >
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--none"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 1
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--none"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--none"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 2
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--none"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--none"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 3
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--none"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
  </ssr-keep>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component spacing: small 1`] = `
<bolt-accordion spacing="small">
  <ssr-keep for="bolt-accordion"
            class="c-bolt-accordion"
  >
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--small"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 1
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--small"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--small"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 2
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--small"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--small"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 3
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--small"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
  </ssr-keep>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component spacing: xsmall 1`] = `
<bolt-accordion spacing="xsmall">
  <ssr-keep for="bolt-accordion"
            class="c-bolt-accordion"
  >
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--xsmall"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 1
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--xsmall"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--xsmall"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 2
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--xsmall"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--xsmall"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 3
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--xsmall"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
  </ssr-keep>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component trigger spacing: large 1`] = `
<bolt-accordion>
  <ssr-keep for="bolt-accordion"
            class="c-bolt-accordion"
  >
    <bolt-accordion-item trigger-spacing="large">
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--large"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 1
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
  </ssr-keep>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component trigger spacing: medium 1`] = `
<bolt-accordion>
  <ssr-keep for="bolt-accordion"
            class="c-bolt-accordion"
  >
    <bolt-accordion-item trigger-spacing="medium">
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 1
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
  </ssr-keep>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component trigger spacing: none 1`] = `
<bolt-accordion>
  <ssr-keep for="bolt-accordion"
            class="c-bolt-accordion"
  >
    <bolt-accordion-item trigger-spacing="none">
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--none"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 1
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
  </ssr-keep>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component trigger spacing: small 1`] = `
<bolt-accordion>
  <ssr-keep for="bolt-accordion"
            class="c-bolt-accordion"
  >
    <bolt-accordion-item trigger-spacing="small">
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--small"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 1
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
  </ssr-keep>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component trigger spacing: xsmall 1`] = `
<bolt-accordion>
  <ssr-keep for="bolt-accordion"
            class="c-bolt-accordion"
  >
    <bolt-accordion-item trigger-spacing="xsmall">
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--xsmall"
          >
            <ssr-keep for="bolt-accordion-item"
                      class="c-bolt-accordion-item__trigger-content"
            >
              <div slot="trigger">
                Accordion item 1
              </div>
            </ssr-keep>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <ssr-keep for="bolt-accordion-item"
                    class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium"
          >
            This is the accordion content.
          </ssr-keep>
        </div>
      </div>
    </bolt-accordion-item>
  </ssr-keep>
</bolt-accordion>
`;
